force-app/main/default/objects/Observation__c/Observation__c.object-meta.xml
<CustomObject>
    <label>Observation</label>
    <nameField>
        <label>Observation Ref. No.</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Observation</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>