force-app/main/default/objects/Observation__c/fields/Asset__c.field-meta.xml
<CustomField>
    <fullName>Asset__c</fullName>
    <formula>TEXT(Visit__r.Asset__c)</formula>
    <label>Asset</label>
    <type>Text</type>
</CustomField>