force-app/main/default/objects/Observation__c/fields/Building__c.field-meta.xml
<CustomField>
    <fullName>Building__c</fullName>
    <formula>Visit__r.Building__c</formula>
    <label>Building</label>
    <type>Text</type>
</CustomField>