force-app/main/default/objects/Observation__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <formula>Visit__r.Date__c</formula>
    <label>Date</label>
    <type>Date</type>
</CustomField>