force-app/main/default/objects/Observation__c/fields/Deterio__c.field-meta.xml
<CustomField>
    <fullName>Deterio__c</fullName>
    <label>Deterioration</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>