force-app/main/default/objects/Observation__c/fields/Division__c.field-meta.xml
<CustomField>
    <fullName>Division__c</fullName>
    <formula>Text(Visit__r.Division__c)</formula>
    <label>Division</label>
    <type>Text</type>
</CustomField>