force-app/main/default/objects/Observation__c/fields/Negative_Comments__c.field-meta.xml
<CustomField>
    <fullName>Negative_Comments__c</fullName>
    <label>Negative Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>