force-app/main/default/objects/Observation__c/fields/Positive_Comments__c.field-meta.xml
<CustomField>
    <fullName>Positive_Comments__c</fullName>
    <label>Positive Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>