force-app/main/default/objects/Observation__c/fields/Problem_Type__c.field-meta.xml
<CustomField>
    <fullName>Problem_Type__c</fullName>
    <label>Problem Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bad Smell</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>