force-app/main/default/objects/Observation__c/fields/Sub_Building__c.field-meta.xml
<CustomField>
    <fullName>Sub_Building__c</fullName>
    <formula>Visit__r.Sub__c</formula>
    <label>Sub-Building</label>
    <type>Text</type>
</CustomField>