force-app/main/default/objects/Observation__c/fields/Suggestions__c.field-meta.xml
<CustomField>
    <fullName>Suggestions__c</fullName>
    <label>Suggestions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>