force-app/main/default/objects/Observation__c/fields/To_Be__c.field-meta.xml
<CustomField>
    <fullName>To_Be__c</fullName>
    <label>To Be assigned Department</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>COMMBLDG_CL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>